2012-01-05  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/math/BigDecimal/constructorInt.java:
	* gnu/testlet/java/math/BigDecimal/constructorLong.java:
	New tests checking constructors introduced in Java 1.5 API.

2012-01-03  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/testlet/java/text/DateFormatSymbols/SanityCheck.java:
	New test to check the arrays returned by DateFormatSymbols
	for each locale are the right size.  See RH#712013.

2012-01-03  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/awt/List/addActionListener.java:
	* gnu/testlet/java/awt/List/addItemListener.java:
	Added new tests for an AWT List class.

2011-12-19  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/awt/Label/MouseListenerTest.java:
	* gnu/testlet/java/awt/Label/MouseMotionListenerTest.java:
	* gnu/testlet/java/awt/Label/MouseWheelListenerTest.java:
	Added new tests for an AWT Label class.
	* gnu/testlet/java/awt/Label/PaintTest.java:
	* gnu/testlet/java/awt/Label/addComponentListener.java:
	* gnu/testlet/java/awt/Label/addFocusListener.java:
	* gnu/testlet/java/awt/Label/addHierarchyBoundsListener.java:
	* gnu/testlet/java/awt/Label/addHierarchyListener.java:
	* gnu/testlet/java/awt/Label/addInputMethodListener.java:
	* gnu/testlet/java/awt/Label/addKeyListener.java:
	* gnu/testlet/java/awt/Label/addMouseListener.java:
	* gnu/testlet/java/awt/Label/addMouseMotionListener.java:
	* gnu/testlet/java/awt/Label/addMouseWheelListener.java:
	* gnu/testlet/java/awt/Label/addPropertyChangeListener.java:
	* gnu/testlet/java/awt/Label/constructors.java:
	Minor fixes - javadoc, fixed compiler warnings etc.

2011-12-15  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/awt/List/PaintTestEmptyList.java
	* gnu/testlet/java/awt/List/PaintTestFilledList.java
	Two new test for AWT List class.
	* gnu/testlet/java/awt/List/ScrollbarPaintTest.java:
	Fixed

2011-12-14  Pavel Tisnovsky  <ptisnovs@redhat.com>
