@@ -1,3 +1,10 @@
+2012-01-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* gnu/testlet/java/math/BigDecimal/constructorCharacterSequence.java:
+	* gnu/testlet/java/math/BigDecimal/constructorDouble.java:
+	* gnu/testlet/java/math/BigDecimal/constructorString.java:
+	Three new tests checking constructors introduced in Java 1.5 API.
+
 2012-01-05  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* gnu/testlet/java/math/BigDecimal/constructorInt.java:
